chore: test md pages

--- a/content/2.stocks/2.test.md
+++ b/content/2.stocks/2.test.md
@@ -1,4 +1,9 @@
-# Nuxt Content
+---
+title: TEst
+description: Conteúdo direcionado.
+---
+
+## Ações, FIIs
 
 This page corresponds to the `/` route of your website. You can delete it or create another file in the `content/` directory.
 
